--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
 
-<style>
+<!-- <style>
     body {
         background-image: url('background.png');
         background-repeat: no-repeat;
         background-size: 100% 100%;
     }
-</style>
+</style> -->
 
 <body>
     <header>
@@ -25,7 +25,7 @@
                 <a href="https://vanshika8975.github.io/myfirstwebsite/" target="_blank">Home</a>
                 <a href="https://vanshika8975.github.io/myfirstwebsite/" target="_blank">Gallery</a>
                 <a href="https://vanshika8975.github.io/myfirstwebsite/" target="_blank">About</a>
-                <a href="https://vanshika8975.github.io/myfirstwebsite/" target="_blank">Contact</a>
+                <a href="https://vanshika8975.github.io/myfirstwebsite/" target="_blank">Contacts</a>
         </nav>
         <main>
             <section>
